loader fixed on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -506,7 +506,7 @@ and (max-device-width : 815px) {
     content:'';
     display:block;
     position:absolute;
-    left:48%;top:40%;
+    left:50%;top:50%;
     width:40px;height:40px;
     border-style:solid;
     border-color:black;
